// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation15 makeStyles-root-133 App  MuiPaper-rounded"
>
  <h1
    className=" text-center"
  >
    HackerNews API
  </h1>
  <div
    className="page"
  >
    <div
      className="interactions"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation1 makeStyles-root-161 MuiPaper-rounded"
      >
        <div
          className="MuiInputBase-root makeStyles-input-162"
          onClick={[Function]}
        >
          <input
            aria-label="Search Google Maps"
            className="MuiInputBase-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search HackerNews API"
            type="text"
            value="gatsby"
          />
        </div>
        <hr
          className="MuiDivider-root makeStyles-divider-164"
        />
        <button
          aria-label="Search"
          className="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-163"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <hr />
      <div
        className="Table-one"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation1 NewsList-root-207 MuiPaper-rounded"
        >
          <table
            className="MuiTable-root NewsList-table-208"
          >
            <thead
              className="MuiTableHead-root"
            >
              <tr
                className="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  aria-sort={null}
                  className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head"
                  scope="col"
                >
                  TITLE
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head MuiTableCell-alignLeft"
                  scope="col"
                >
                  AUTHOR
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head MuiTableCell-alignCenter"
                  scope="col"
                >
                  RATING
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head MuiTableCell-alignCenter"
                  scope="col"
                >
                  <span
                    aria-hidden={true}
                    className="material-icons MuiIcon-root"
                  >
                    comment
                  </span>
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head"
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              className="MuiTableBody-root"
            />
          </table>
        </div>
        <div
          className="interactions"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiButton-root float-right MuiButton-text"
            href="#"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="MuiButton-label"
            >
              →
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 makeStyles-root-161 MuiPaper-rounded"
>
  <div
    className="MuiInputBase-root makeStyles-input-162"
    onClick={[Function]}
  >
    <input
      aria-label="Search Google Maps"
      className="MuiInputBase-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search HackerNews API"
      type="text"
    />
  </div>
  <hr
    className="MuiDivider-root makeStyles-divider-164"
  />
  <button
    aria-label="Search"
    className="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-163"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 NewsList-root-207 MuiPaper-rounded"
>
  <table
    className="MuiTable-root NewsList-table-208"
  >
    <thead
      className="MuiTableHead-root"
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head"
          scope="col"
        >
          TITLE
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head MuiTableCell-alignLeft"
          scope="col"
        >
          AUTHOR
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head MuiTableCell-alignCenter"
          scope="col"
        >
          RATING
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head MuiTableCell-alignCenter"
          scope="col"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            comment
          </span>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root NewsList-tableCell-209 MuiTableCell-head"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
    />
  </table>
</div>
`;
